[package]
name = "locator"
version = "0.1.0"
edition = "2024"

[dependencies]

futures = "0.3.30"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tokio_schedule = "0.3.2"
actix-web = "4.11.0"
actix-web-httpauth = "0.8"
actix-multipart = "*"

reqwest = { version = "0.12", features = ["json"] }

redis = { version = "1.0.0-rc.1", features = ["tokio-comp", "aio"] }

env_logger = "0.11.8"
log = { version = "0.4.28", features = ["std"] }
mime = "0.3.17"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_with = "3.16.0"

tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
deadpool-postgres = { version = "0.14.1", features = ["serde"] }
tokio-postgres = { version = "0.7.13", features = ["with-chrono-0_4"] }

dotenvy = "0.15.7"
clap = { version = "4.5.4", features = ["derive"] }
toml = "0.8.14"

anyhow = "1.0.86"
thiserror = "1"

chrono = { version = "0.4.38", features = ["serde"] }
csv = "1.3.0"
uuid = { version = "1", features = ["serde", "v4", "fast-rng"] }
once_cell = "1"

geo = "0.29.2"
geo-types = "0.7.14"
geojson = { version = "0.24.1", features = ["geo-types"] }
polyline = "0.11.0"
h3o = { version = "0.7.0", features = ["geo"] }
ipnetwork = "0.20.0"
mac_address = { version = "1.1.7", features = ["serde"] }
gpx = "0.10.0"
clusters = { git = "https://github.com/savish/clusters", tag = "v1.0.0" }

strum = { version = "0.27.2", features = ["derive"] }
strum_macros = { version = "0.27.2" }

rusty_pool = "0.7.0"
flume = "0.11.1"

num_cpus = "1.16"

[lints.rust]
unsafe_code = "forbid"

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.profiling]
inherits = "release"
debug = true
