[package]
name = "locator"
version = "0.1.0"
edition = "2024"

[dependencies]

futures = "0.3.31"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tokio_schedule = "0.3.2"
actix-web = "4.12.0"
actix-web-httpauth = "0.8"
actix-multipart = "*"

surf = { version = "2.3.2", features = ["hyper-client"] }
reqwest = { version = "0.13.1", features = ["json", "form"] }

redis = { version = "1.0.2", features = ["tokio-comp", "aio"] }

env_logger = "0.11.8"
log = { version = "0.4.29", features = ["std"] }
mime = "0.3.17"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_with = "3.16.1"

tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
deadpool-postgres = { version = "0.14.1", features = ["serde"] }
tokio-postgres = { version = "0.7.16", features = ["with-chrono-0_4"] }

dotenvy = "0.15.7"
clap = { version = "4.5.54", features = ["derive"] }
toml = "0.9.8"

anyhow = "1.0.100"
thiserror = "2.0.18"

chrono = { version = "0.4.43", features = ["serde"] }
chrono-tz = "0.10.4"

csv = "1.4.0"
uuid = { version = "1.19.0", features = ["serde", "v4", "fast-rng"] }
once_cell = "1"

geo = "0.29.2"
geo-types = "0.7.14"
geojson = { version = "0.24.1", features = ["geo-types"] }
polyline = "0.11.0"
h3o = { version = "0.7.0", features = ["geo"] }
ipnetwork = "0.20.0"
mac_address = { version = "1.1.7", features = ["serde"] }
gpx = "0.10.0"
clusters = { git = "https://github.com/savish/clusters", tag = "v1.0.0" }

strum = { version = "0.27.2", features = ["derive"] }
strum_macros = { version = "0.27.2" }

rusty_pool = "0.7.0"
flume = "0.12.0"

num_cpus = "1.17"

[lints.rust]
unsafe_code = "forbid"

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.profiling]
inherits = "release"
debug = true